# SPRCourseWork2019_OLD_2

./: CMakeLists.txt  Driver.cpp  README.md
Game/: Enemy.h  EventManager.h  GameManager.h  GameObject.h  Player.h  ScreenManager.h  Ship.h  UI_Manager.h  Weapon.h
cmake/: FindSDL_draw.cmake
